style-mainPage.css
body {
    /* display: flex;  */

    overflow-x: hidden;
    margin: 0px;
}

 #arrow-link{
    position: fixed;
    top: 76%;
    /* bottom: 20%; */
    /* right: 93%; */
    left: 3%;

    margin: 0;
}

#arrow{
    width: 4vw;
    height: 4vw;

    position: fixed;
    top: 76%;
    /* bottom: 20%; */
    /* right: 93%; */
    left: 3%;

    margin: 0;    
} 

#hero {
    background-image: url("src/hero/background.jpg");
    width: 100vw;
    height: 100vh;

    background-size: cover;
    display: block;

    /* flex-direction: column; */
}


/* #upper-hero {
    width: auto;
    height: auto;
    display: flex;
    justify-content: center;
    align-items: center;

    align-items: flex-end; } */



#headline {
    color: honeydew;
    font-style: italic;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    font-size: 12vw;
    margin: 0px;
    text-shadow: 1vw 1vw 0.7vw black;
    float: inline-start;

    text-align: center;
    padding-top: 5vw;

    top: 0px;
    position: sticky;

    height: auto;

    /* -webkit-text-fill-color: ;
    -webkit-text-stroke-color: black;
    -webkit-text-stroke: 0.1vw; */
}





#main {
    background-image: url("src/hero/background.jpg");
    background-size: cover;

    width: 100vw;
    height: 100%;

    font-size: 1.2vw;


    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}

.middel-line {
    width: 100%;
    height: 6vw;

    /* padding-top: 2%; */
    /* padding-bottom: 2%; */

    margin-bottom: 3%;

    background-color: black;
    display: flex;
    align-items: center;
    justify-content: center;
    color: bisque;
}

.middel-word {
    margin: 0px;
    font-size: 4vw;
}


.product-window {
    width: 40vw;
    height: 10vw;


    margin-bottom: 2%;
    margin-left: 3%;
    margin-right: 3%;

    background-color: white;
    border: 0.2vw solid black;
    display: flex;
    justify-content: space-between;
    border-radius: 1vw;



}

.product-window:hover {
    box-shadow: 1.5vw 1.5vw 1vw black;
}


.product-image {
    width: 10vw;
    height: 10vw;
    border-radius: 1vw;

}

.p-text {
    width: 19.9vw;
    height: 10vw;
    margin: 0px;
    display: flex;
    align-items: center;

    text-align: center;
}

a {
    width: 9.9vw;
    height: 9.6vw;
    border-radius: 1vw;

}


.button {
    display: flex;

    /* width: 92%;
    height: 97%; */

    width: 9.9vw;
    height: 9.6vw;

    margin: 0px;


    justify-content: space-around;
    align-items: center;
    text-align: center;



    background-color: black;
    color: white;

    border: 0.2vw solid brown;
    border-radius: 1vw;

}

.product-window:hover .button {
    color: crimson;
}


.productPage-links {
    /* color: white; */
    color: black;
}



#reviews {
    background-image: url("src/hero/background.jpg");
    background-size: cover;
    width: 100vw;
    height: 100%;
    height: 200px;

}



#partner-section {
    background-image: url("src/hero/background.jpg");
    background-size: cover;

    width: 100vw;
    height: auto;

    font-size: 1.2vw;


    display: block;
    flex-wrap: wrap;
    justify-content: space-between;

    padding-bottom: 4vw;
}

#partner-logo {
    width: 100vw;
    height: auto;
    display: block;
    justify-content: space-around;
    align-items: center;
    margin: 0px;
    /* justify-content: start;
    align-items: flex-end; */
    padding-bottom: 3vw;
}

#partner-logo img {
    /* width: 8vw;
    height: 8vw; */

    width: 20vw;
    height: auto;

    margin-left: 4vw;
    /* margin-bottom: 7vw; */
    margin-top: 7vw;
    margin-bottom: 3vw;
}



#bottom {
    background-color: rgb(42, 37, 37);
    /* width: auto; */

    width: 100vw;
    height: 8vw;

    display: flex;
    justify-content: space-between;
}

.bottom-links {
    color: rgb(42, 37, 37);
    margin-left: 1vw;
}





#logo {
    height: 100%;
    width: auto;
    display: flex;
    justify-content: flex-end;
    align-items: center;
}

#logo img {

    width: 3.5vw;
    height: 3.5vw;
    
}

#logo a {
    width: 3.5vw;
    height: 3.5vw;
    margin-right: 2.5vw;
}



#bottom-text {
    width: auto;
    height: auto;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    margin-left: 2vw;

    /* align-items: stretch; */
}

#bottom-text p {
    width: 100%;
    height: auto;

    color: white;
    font-size: 2.5vw;

    /* margin-top: 3%;
    margin-bottom: 3%;  */
    margin: 0;
}



@media screen and (max-width: 768px) {
    #logo-headline {
        width: 100vw;
        height: 20vh;
        display: flex;
        flex-wrap: wrap;
        justify-content: space-around;
        align-items: center;
        margin: 0px;
        /* justify-content: start;
        align-items: flex-end; */
    }

    #main {
        /* flex-wrap: nowrap; */
        display: block;
        /* height: auto; */
        background-repeat: repeat-y;
        padding-bottom: 1vw;
    }

    .product-window {
        width: 80vw;
        height: 20vw;


        margin-bottom: 4%;
        margin-left: 6%;
        margin-right: 6%;

        background-color: white;
        border: 0.4vw solid black;
        display: flex;
        justify-content: space-between;
        font-size: 2.5vw;


    }


    .product-image {
        width: 20vw;
        height: 20vw;
    }

    .p-text {
        width: 39.8vw;
        height: 20vw;
        margin: 0px;
        display: flex;
        align-items: center;

        text-align: center;
    }

    a {
        width: 19.8vw;
        height: 19.2vw;
    }

    .button {
        display: flex;

        width: 19.8vw;
        height: 19.2vw;

        margin: 0px;


        justify-content: space-around;
        align-items: center;
        text-align: center;



        background-color: black;
        color: white;

        border: 0.4vw solid brown;

    }
}

